$Id$


v0.83.20	27-May-2006

	mbmon:
		Fixed a text message.

	mbtask:
		Changed welcome message.
		Registration info for the clients was send double coded.
		Delete users from channel when a server disconnects.
		Delete users from a server when server disconnects.
		Check for stopped tasks reverted to the old method without
		signal handlers.


v0.83.19	23-May-2006 - 27-May-2006

	mbtask:
		Changed dynamic arrays to static arrays in the chatserver
		which may prevent mbtask crashes.


v0.83.18	01-Apr-2006 - 23-May-2006

	nodelist.a:
		Fixed parsing the nodelist when IBN:1.2.3.4 returned the IP
		address 1.2.3.4 with port 1.

	mbtask:
		Removed some debug logging.
		Fixed a small bug.
		Code cleanup.
		Some changes to Launch code again.

	mbsebbs:
		Fixed logging of wrong file after upload.
		Removed some zmodem debug logging.


v0.83.17	27-Mar-2006 - 01-Apr-2006

	mbfido:
		Seenby addresses in the internal tables did not store the
		point numbers.
		Fixed notation of numbered groups in golded.inc.

	mbsetup:
		Fixed notation of numbered groups in golded.inc.

	mbnntp:
		Removed AREA:TAG kludge from posted articles.

	mbfile:
		Import now skips empty lines in files.bbs.
		Import now handles properly missing files.


v0.83.16	13-Mar-2006 - 27-Mar-2006

	mbfido:
		If sending crash to a node not in the setup, a default
		archiver is now set to ZIP.
		Accept unpacket mail for own points.
		In created ticfiles in advanced seen-by mode, setting the node
		to 4d will add point numbers to the seen-by lines if needed.
		When message areas are auto changed, the updated golded.inc
		file now has the groupid numbers from the groups in echomail
		or news areas.

	mbsetup:
		Added setup switch for tic nodes that need a 4d seen-by line.
		When saving message areas, the golded.inc file now has the
		groupid numbers from the groups in echomail or news areas.
		The message groups now handle groupnumbers for golded groups.


v0.83.15	05-Mar-2006 - 13-Mar-2006

	mbsebbs: